--- a/app/views/courses/index.erb
+++ b/app/views/courses/index.erb
@@ -2,27 +2,26 @@
   <div class="container">
     <div>
       <% if @courses.empty? %>
-          검색결과가 없습니다.
+        <%= t "course.no_search_result" %>
+        (image)<%# TODO %>
       <% else %>
         <table class="search_tbl">
-        <p class="search_sen1"><span class="search_keyword"><%= @search_param %></span>에 대한 검색 결과</p>
-        <p class="search_sen2"><%= @courses.count %>개의 수업을 찾았습니다</p>
+        <p class="search_sen1"><span class="search_keyword"></span><%= t( 'course.search_result', search_param: @search_param ) %></p>
+        <p class="search_sen2"><%= t( 'course.search_count', search_count: @courses.count) %></p>
           <thead>
             <tr>
-              <th>학수번호</th>
-              <th>과목명</th>
-              <th>교수명</th>
+              <th><%= t "course.subject_name" %></th>
+              <th><%= t "course.professor_name" %></th>
             </tr>
           </thead>
           <% @courses.each do |c| %>
           <tbody>
               <tr data-href='/courses/<%= c.id %>' style="cursor: pointer;">
-                <td><%= c.lecture.code %></td>
                 <td>
                   <% if c.is_major %>
-                    <span class="lec_cate lec_major">전공</span>
+                    <span class="lec_cate lec_major"><%= t "course.major" %></span>
                   <% else %>
-                    <span class="lec_cate lec_kyo">교양</span>
+                    <span class="lec_cate lec_kyo"><%= t "course.general" %></span>
                   <% end %>
                   <%= c.lecture.name %>
                 </td>
