--- a/app/views/evaluations/main.html.erb
+++ b/app/views/evaluations/main.html.erb
@@ -1,8 +1,8 @@
 <div class="index_container">
   <div class="container-fluid">
     <div class="main_feed">
-      <p class="feed_head">앗! 뜨거워! 방금 막 올라온 강의평</p>
-      <p class="feed_head2">학우들이 쓴 강의평을 실시간으로 확인해보세요!</p>
+      <p class="feed_head"><%= (I18n.t 'evaluation.main_head1') %></p>
+      <p class="feed_head2"><%= (I18n.t 'evaluation.main_head2') %></p>
       <div id="infinite_scroll">
       <a href="/recent_evaluations?since=0" class="next_content"></a>
       </div>
