--- a/app/views/evaluations/recent.erb
+++ b/app/views/evaluations/recent.erb
@@ -1,10 +1,6 @@
 <% since_id = 1 %>
 <% @evaluations.each_with_index do |e, i| %>
-  <% if e.like.is_like %>
-    <div class="feed_each">
-  <% else %>
-    <div class="feed_each feed_each_dislike">
-  <% end %>
+  <% if e.like.is_like %> <div class="feed_each"> <% else %> <div class="feed_each feed_each_dislike"> <% end %>
     <div class="row">
       <div class="col-xs-12 col-sm-12 feed_each_div">
         <div class="col-xs-12">
@@ -23,7 +19,7 @@
         <p class="feed_content col-xs-12">
           <%= e.body.gsub(/(?:\n\r?|\r\n?)/, '<br>').html_safe %></p>
         </p>
-        
+
         <div class="feed_etc col-xs-12">
           <p class="feed_etc_left">
             <%= e.time_ago %>
@@ -43,31 +39,25 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <p class="modal-title">신고하기</p>
+          <p class="modal-title"><%= (I18n.t 'evaluation.report') %></p>
           <button type="button" class="close" data-dismiss="modal">&times;</button>
         </div>
         <div class="modal-body">
           <%= form_for Report.new do |f| %>
               <%= f.hidden_field :evaluation_id, value: e.id %>
-              <%#= f.text_field :body %>
               <%= f.text_area :body, placeholder: (t "report.placeholder" ), rows: 8, class: "write_comment_box report_box" %>
               <%= f.submit (t "report.submit_button"), class: "review_write_btn report_write_btn" %>
-              <%#= f.submit "send" %>
           <% end %>
         </div>
-        <!--<div class="modal-footer">-->
-        <!--  <p>-->
-        <!--    신고하신 내용은 확인, 수정, 삭제가 불가능합니다. 운영자가 검토할게요~ -->
-        <!--  </p>-->
-          <!--<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>-->
-        <!--</div>-->
       </div>
     </div>
   </div>
   <%# report modal form end %>
+    
   <% since_id = e.id %>
 <% end %>
+</div>
 
 <% if @evaluations.count > 0 %>
-<a href="/recent_evaluations?since=<%= since_id %>" class="next_content"></a>
+  <a href="/recent_evaluations?since=<%= since_id %>" class="next_content"></a>
 <% end %>
