wiki/my page 파이널, nav 글자 크기 수정

--- a/app/views/courses/_wikis.html.erb
+++ b/app/views/courses/_wikis.html.erb
@@ -24,7 +24,8 @@
     <%= wiki.body.html_safe %>
   </div>
 <% end %>
-<a href="#" id="send_wiki_content">위키 전송</a>||<a href="/wiki/<%= @course.id %>/history">지난 기록 보기</a>
+<a href="#" id="send_wiki_content">위키 전송</a>||
+<!--<a href="/wiki/<#%= @course.id %>/history">지난 기록 보기</a>-->
 
 <script>
 $(function(){
