--- a/app/views/mypages/_my_review.html.erb
+++ b/app/views/mypages/_my_review.html.erb
@@ -1,8 +1,6 @@
 <div class="container-fluid">
     <div>
-        <% @evaluations.each_with_index do |e, i|  %>
-            <% unless i == 0 %>
-            <% end %>
+        <% @evaluations.each_with_index do |e|  %>
         <div class="feed_each">
           <div class="row">
             <div class="col-xs-12 col-sm-12 feed_each_div">
