--- a/app/views/layouts/_header.erb
+++ b/app/views/layouts/_header.erb
@@ -33,11 +33,21 @@
 
         <ul>
           <% if !(@current_user.has_role? 'evaluator') && @current_user.point >= 1000 %>
-              <li><br>1000점<br><%= button_to '오픈하기', users_evaluator_add_path, class: "nav_btn", user_id: session[:user_id], method: :post, :onClick => 'alert("1000포인트 차감! 강평열람 권한이 부여되었습니다!")' %><br></li>
+              <li>
+                <a>
+                <p>1000점</p>
+                <%= button_to '오픈하기', users_evaluator_add_path, class: "nav_btn", user_id: session[:user_id], method: :post, :onClick => 'alert("1000포인트 차감! 강평열람 권한이 부여되었습니다!")' %>
+                </a>
+              </li>
           <% elsif !(@current_user.has_role? 'evaluator') && @current_user.point < 1000 %>
-              <li><br>1000점<br><%= button_to '오픈하기', roles_lack_path, class: "nav_btn", user_id: session[:user_id], method: :post, :onClick => 'alert("포인트가 부족합니다! 강의평가로 포인트를 획득하세요!")' %><br></li>
+              <li>
+                <a>
+                <p>1000점</p>
+                <%= button_to '오픈하기', roles_lack_path, class: "nav_btn", user_id: session[:user_id], method: :post, :onClick => 'alert("포인트가 부족합니다! 강의평가로 포인트를 획득하세요!")' %>
+                </a>
+              </li>
           <% else %>
-              <li>강의평가를 열람해보세요!</li>
+              <li><a>강의평가를 열람해보세요!</a></li>
           <% end %>
         </ul>
       </li>
@@ -54,11 +64,21 @@
 
         <ul>
           <% if !(@current_user.has_role? 'wikier') && @current_user.point >= 1000 %>
-              <li><br>1000점<br><%= button_to '오픈하기', users_wikier_add_path, class: "nav_btn", user_id: session[:user_id], method: :post, :onClick => 'alert("1000포인트 차감! 강평열람 권한이 부여되었습니다!")' %><br>
+              <li>
+                <a>
+                  <br>1000점<br><%= button_to '오픈하기', users_wikier_add_path, class: "nav_btn", user_id: session[:user_id], method: :post, :onClick => 'alert("1000포인트 차감! 강평열람 권한이 부여되었습니다!")' %><br>
+                </a>
+              </li>
           <% elsif !(@current_user.has_role? 'wikier') && @current_user.point < 1000 %>
-              <li><br>1000점<br><%= button_to '오픈하기', roles_lack_path, class: "nav_btn", method: :post, :onClick => 'alert("포인트가 부족합니다! 강의평가로 포인트를 획득하세요!")' %><br></li>
+              <li>
+                <a>
+                <br>1000점<br><%= button_to '오픈하기', roles_lack_path, class: "nav_btn", method: :post, :onClick => 'alert("포인트가 부족합니다! 강의평가로 포인트를 획득하세요!")' %><br>
+                </a>
+              </li>
           <% else %>
-              <li>위키를 열람해보세요!</li>
+              <li>
+                <a>위키를 열람해보세요!</a>
+              </li>
           <% end %>
         </ul>
       </li>
