--- a/app/views/mypages/info.html.erb
+++ b/app/views/mypages/info.html.erb
@@ -1,6 +1,6 @@
 <div class="info_container">
   <div class="info_content clearfix">
-    <div class="myinfo_div">
+    <div class="info_div">
       <div class="info_form">
         <h2 class="info_head">계정 설정</h2>
           <div class="nickname_group setting_group">
@@ -16,9 +16,7 @@
               </div>
               <div class="edit_content 2_nick" style="display: none;">
                 <%= form_for(@current_user) do |f| %>
-                  <!--아이디, pw hidden값으로 같이 넘겨줘야하는데 id는 되는데 pw는 안됨! pw만 같이 넘기면 해결-->
                   <%= f.hidden_field :email, value: @current_user.email %>
-                  <%= f.hidden_field :password, value: @current_user.password % 
                 <div class="edit_value">
                   <%= f.text_field :nickname, placeholder: "새 닉네임(8자 이내)", class: "input_edit" %>
                 </div>
@@ -55,16 +53,15 @@
             <div class="group_content">
               <div class="edit_content 1_pw">
                 <div class="edit_value">
-                  ●●●●●●●● <%# 이 부분 어떻게 표기할 것인지 의논필요! 자릿수만큼 보여줄건지? 그냥 임의로 동그라미 8개? %>
-                  <%#= @current_user.password %>
+                  ●●●●●●●●
                 </div>
-                <i class="fa fa-pencil pencil_pw" aria-hidden="true" onclick="edit_open('pw');"></i><br>
+                <i class="fa fa-pencil pencil_pw" aria-hidden="true" onclick="edit_open('pw');"></i>
               </div>
               
               <div class="edit_content 2_pw" style="display: none;">
                 <%= form_for(@current_user) do |f| %>
                   <%= f.hidden_field :email, value: @current_user.email %>
-                  <%= f.hidden_field :password, value: @current_user.password %>
+                  <%#= f.hidden_field :password, value: @current_user.password %>
                   <div class="edit_value">
                     <%= f.password_field :password, placeholder: "현재 비밀번호", class: "input_edit" %>
                     <%= f.password_field :password, placeholder: "새 비밀번호", class: "input_edit" %>
@@ -141,6 +138,9 @@
 
 <%#= f.submit "변경사항 저장하기" %>
 <%# end %>
+      </div>
+    </div>
+  </div>
 </div>
 
 <script>
